--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,14 @@
             "email": "josh@jmarshall.com.au"
         }
     ],
+    "scripts": {
+        "test": "phpunit"
+    },
     "require": {
         "php": ">=7.2"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.6|^7.3|^9.0"
     },
     "autoload": {
         "psr-4": {
